--- a/environment.yml
+++ b/environment.yml
@@ -3,17 +3,18 @@
 name: contactpose
 
 channels:
+  - open3d-admin
   - anaconda
 
 dependencies:
   - python=3.7
   - matplotlib
+  - open3d
   - opencv
   - scikit-learn
   - tqdm
   - requests
   - pip
   - pip:
-      - chumpy
-      - open3d
       - transforms3d
+      - chumpy
